# caelum-sys

./: .gitignore  LICENSE  MANIFEST.in  README.md  USAGE.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  python-publish-pypi.yaml  test.yml
caelum_sys/: __init__.py  auto_import_plugins.py  cli.py  core_actions.py  executor.py  parser.py  registry.py  system.py
caelum_sys.egg-info/: PKG-INFO
caelum_sys/plugins/: __init__.py  browser.py  caelum_control.py  data_processing.py  date_time.py  dev_tools.py  file_info.py  file_management.py  files.py  git_integration.py  help_system.py  math_calculations.py  media_controls.py  misc_commands.py  monitoring_tools.py  network_tools.py  process_tools.py  quick_notes.py  screenshot.py  screenshot_tools.py  spotify.py  system_info.py  system_utils.py  text_clipboard.py  web_api.py  windows_tools.py
tests/: test_comprehensive.py  test_do.py  test_integration.py  test_parser.py  test_plugins.py
